@@ -12,6 +12,7 @@ In Progress
   the attacks. This prevents a situation where Find Attacks after a scan yielded
   nothing because Armitage had not synced with the database yet.
 - Deconfliction server now complains when you try to use 127.0.0.1 as your host
+- Added cut/copy/paste/clear menu to most textfields.
 
 11.13.11 - A major rewrite of a lot of stuff.
 --------
